# omi-cpp-parquet-wide-record

./: .gitignore  CMakeLists.txt  ReadMe.md
.github/workflows/: build.yml
jnx/: CMakeLists.txt  jnx_equities_pts_itch_v1_6.cpp
nasdaq/: CMakeLists.txt  nasdaq_equities_totalview_itch_v5_0.cpp
